crates/iroha_schema_derive/tests/ui_fail/enum_named_fields.rs
use iroha_schema::IntoSchema;

#[derive(IntoSchema)]
enum NamedVariant {
    Foo { first: u8, second: u8 },
}

fn main() {}
